--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(saper)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(saper main.cpp
-        Array2D.h)
+        Array2D.h
+        MinesweeperBoard.h
+        MinesweeperBoard.cpp)
